v540TU: attempting dasharo main branch latest commit
- Missing patches in all branches tested, see patches/coreboot-dasharo-unreleased/ (and other patches/coreboot* dirs for references on patches kep in against 24.02.01)
Had to delete patches/coreboot-dasharo-unreleased/0004-cbmem_tpm-clear_whole_log_on_creation.patch simply because it doesn't apply cleanly, didn't check if present or not.

Fails:
3rdparty/blobs/mainboard/clevo/mtl-h/FSP/MeteorLake/Include/ is not in 3rdparty, so coreboot-blobs pointed commit doesn't seem to be the right one

Waiting for clear seperation of duties scoping/commit I should be using prior of continuing trial and error.

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom_v54x_mtl.config
+++ b/config/coreboot-novacustom_v54x_mtl.config
@@ -7,7 +7,7 @@
 # General setup
 #
 CONFIG_COREBOOT_BUILD=y
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="v0.9.0-rc6"
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_COMPILER_LLVM_CLANG is not set
@@ -79,6 +79,7 @@ CONFIG_VENDOR_CLEVO=y
 # CONFIG_VENDOR_GETAC is not set
 # CONFIG_VENDOR_GIGABYTE is not set
 # CONFIG_VENDOR_GOOGLE is not set
+# CONFIG_VENDOR_HARDKERNEL is not set
 # CONFIG_VENDOR_HP is not set
 # CONFIG_VENDOR_IBASE is not set
 # CONFIG_VENDOR_IBM is not set
@@ -115,14 +116,14 @@ CONFIG_MAINBOARD_VERSION="V540TU"
 CONFIG_MAINBOARD_DIR="clevo/mtl-h"
 CONFIG_DIMM_MAX=4
 CONFIG_DIMM_SPD_SIZE=1024
-CONFIG_FMDFILE=""
+CONFIG_FMDFILE="src/mainboard/clevo/mtl-h/vboot-rwab.fmd"
 # CONFIG_NO_POST is not set
 CONFIG_MAINBOARD_VENDOR="Clevo"
-CONFIG_CBFS_SIZE=0x1000000
+CONFIG_CBFS_SIZE=0xA00000
 CONFIG_MAX_CPUS=22
 CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 # CONFIG_POST_DEVICE is not set
-CONFIG_POST_IO=y
+# CONFIG_POST_IO is not set
 CONFIG_UART_FOR_CONSOLE=0
 CONFIG_DEVICETREE="devicetree.cb"
 # CONFIG_VBOOT is not set
@@ -169,7 +170,7 @@ CONFIG_BOARD_CLEVO_V540TU=y
 # CONFIG_BOARD_CLEVO_NV40MZ is not set
 # CONFIG_BOARD_CLEVO_NS50MU is not set
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="V54x_6x_TU"
-CONFIG_CONSOLE_POST=y
+# CONFIG_CONSOLE_POST is not set
 # CONFIG_USE_PM_ACPI_TIMER is not set
 CONFIG_TPM_PIRQ=0x61
 # CONFIG_SOC_INTEL_CSE_SEND_EOP_EARLY is not set
@@ -189,12 +190,16 @@ CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
 CONFIG_DRIVERS_INTEL_WIFI=y
-CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
+CONFIG_IFD_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/descriptor.bin"
+CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/me.bin"
+CONFIG_GBE_BIN_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/gbe.bin"
+CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x200000
+CONFIG_PCIEXP_DEFAULT_MAX_RESIZABLE_BAR_BITS=36
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
-CONFIG_USE_LEGACY_8254_TIMER=y
+# CONFIG_USE_LEGACY_8254_TIMER is not set
 # CONFIG_DEBUG_SMI is not set
-# CONFIG_HAVE_IFD_BIN is not set
+CONFIG_HAVE_IFD_BIN=y
 CONFIG_PCIEXP_HOTPLUG_BUSES=42
 CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM=0x1c000000
@@ -209,7 +214,7 @@ CONFIG_PCIEXP_CLK_PM=y
 CONFIG_PC_CMOS_BASE_PORT_BANK1=0x72
 CONFIG_FSP_TEMP_RAM_SIZE=0x20000
 CONFIG_EC_GPE_SCI=0x50
-# CONFIG_TPM_MEASURED_BOOT is not set
+CONFIG_TPM_MEASURED_BOOT=y
 CONFIG_LINUX_COMMAND_LINE=""
 CONFIG_BOARD_ROMSIZE_KB_32768=y
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
@@ -246,6 +251,8 @@ CONFIG_SYSTEM_TYPE_LAPTOP=y
 # SoC
 #
 CONFIG_CHIPSET_DEVICETREE="soc/intel/meteorlake/chipset.cb"
+CONFIG_FSP_M_FILE="$(obj)/Fsp_M.fd"
+CONFIG_FSP_S_FILE="$(obj)/Fsp_S.fd"
 CONFIG_CBFS_MCACHE_SIZE=0x4000
 CONFIG_ROMSTAGE_ADDR=0x2000000
 CONFIG_VERSTAGE_ADDR=0x2000000
@@ -278,17 +285,17 @@ CONFIG_SOC_INTEL_I2C_DEV_MAX=6
 CONFIG_SOC_INTEL_UART_DEV_MAX=3
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
-CONFIG_FSP_HEADER_PATH="src/vendorcode/intel/fsp/fsp2_0/meteorlake/"
+CONFIG_FSP_HEADER_PATH="3rdparty/blobs/mainboard/clevo/mtl-h/FSP/MeteorLake/Include/"
+CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
 CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
 CONFIG_MRC_CHANNEL_WIDTH=16
-# CONFIG_BUILDING_WITH_DEBUG_FSP is not set
+CONFIG_BUILDING_WITH_DEBUG_FSP=y
 CONFIG_INTEL_GMA_BCLV_OFFSET=0xc8258
 CONFIG_INTEL_GMA_BCLV_WIDTH=32
 CONFIG_INTEL_GMA_BCLM_OFFSET=0xc8254
 CONFIG_INTEL_GMA_BCLM_WIDTH=32
 CONFIG_FSP_PUBLISH_MBP_HOB=y
-CONFIG_CPU_MAX_TEMPERATURE=110
 CONFIG_MAX_HECI_DEVICES=6
 CONFIG_BOOTBLOCK_IN_CBFS=y
 CONFIG_HAVE_PAM0_REGISTER=y
@@ -298,6 +305,7 @@ CONFIG_SOC_INTEL_METEORLAKE=y
 CONFIG_SOC_INTEL_METEORLAKE_U_H=y
 CONFIG_SOC_INTEL_METEORLAKE_TCSS_USB4_SUPPORT=y
 CONFIG_METEORLAKE_CAR_ENHANCED_NEM=y
+CONFIG_CPU_MAX_TEMPERATURE=110
 CONFIG_IOE_PCR_BASE_ADDRESS=0x3fff0000000
 CONFIG_SOC_INTEL_USB2_DEV_MAX=10
 CONFIG_SOC_INTEL_USB3_DEV_MAX=2
@@ -439,10 +447,10 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
 CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
-CONFIG_FIRMWARE_CONNECTION_MANAGER=y
-# CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
+# CONFIG_FIRMWARE_CONNECTION_MANAGER is not set
+CONFIG_SOFTWARE_CONNECTION_MANAGER=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
-# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
+CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
@@ -535,12 +543,20 @@ CONFIG_EC_SYSTEM76_EC=y
 #
 # Intel Firmware
 #
+# CONFIG_IFDTOOL_DISABLE_ME is not set
+CONFIG_HAVE_ME_BIN=y
+# CONFIG_STITCH_ME_BIN is not set
+# CONFIG_ME_REGION_ALLOW_CPU_READ_ACCESS is not set
 CONFIG_HAVE_INTEL_ME_HAP=y
 # CONFIG_INTEL_ME_DISABLED_HECI is not set
 CONFIG_INTEL_ME_DISABLED_HAP=y
 # CONFIG_INTEL_ME_ENABLED is not set
 CONFIG_INTEL_ME_DEFAULT_STATE=2
 CONFIG_MAINBOARD_USES_IFD_GBE_REGION=y
+# CONFIG_HAVE_GBE_BIN is not set
+# CONFIG_DO_NOT_TOUCH_DESCRIPTOR_REGION is not set
+# CONFIG_LOCK_MANAGEMENT_ENGINE is not set
+CONFIG_UNLOCK_FLASH_REGIONS=y
 CONFIG_BIOS_VENDOR="3mdeb"
 
 #
@@ -616,10 +632,9 @@ CONFIG_ECAM_MMCONF_LENGTH=0x10000000
 CONFIG_PCI_ALLOW_BUS_MASTER=y
 CONFIG_PCI_SET_BUS_MASTER_PCI_BRIDGES=y
 CONFIG_PCI_ALLOW_BUS_MASTER_ANY_DEVICE=y
-# CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS is not set
-# CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR is not set
-CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_ABOVE_4G=y
-# CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G is not set
+CONFIG_PCIEXP_SUPPORT_RESIZABLE_BARS=y
+CONFIG_PCIEXP_LANE_ERR_STAT_CLEAR=y
+CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM_BELOW_4G=y
 CONFIG_PCIEXP_HOTPLUG_IO=0x800
 # CONFIG_EARLY_PCI_BRIDGE is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
@@ -628,7 +643,7 @@ CONFIG_INTEL_GMA_HAVE_VBT=y
 CONFIG_INTEL_GMA_ADD_VBT=y
 # CONFIG_SOFTWARE_I2C is not set
 CONFIG_I2C_TRANSFER_TIMEOUT_US=500000
-CONFIG_RESOURCE_ALLOCATION_TOP_DOWN=y
+# CONFIG_RESOURCE_ALLOCATION_TOP_DOWN is not set
 # end of Devices
 
 #
@@ -646,7 +661,7 @@ CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP_EARLY=y
 # CONFIG_SPI_FLASH_NO_FAST_READ is not set
 CONFIG_TPM_INIT_RAMSTAGE=y
-# CONFIG_TPM_PPI is not set
+CONFIG_TPM_PPI=y
 CONFIG_NO_UART_ON_SUPERIO=y
 # CONFIG_DRIVERS_UART_OXPCIE is not set
 # CONFIG_VPD is not set
@@ -668,10 +683,11 @@ CONFIG_PLATFORM_USES_FSP2_1=y
 CONFIG_PLATFORM_USES_FSP2_2=y
 CONFIG_PLATFORM_USES_FSP2_3=y
 CONFIG_PLATFORM_USES_FSP2_X86_32=y
-# CONFIG_ADD_FSP_BINARIES is not set
+CONFIG_ADD_FSP_BINARIES=y
 CONFIG_FSP_T_LOCATION=0xfffe0000
 CONFIG_FSP_S_CBFS="fsps.bin"
 CONFIG_FSP_M_CBFS="fspm.bin"
+CONFIG_FSP_FULL_FD=y
 CONFIG_FSP_T_RESERVED_SIZE=0x0
 CONFIG_FSP_M_XIP=y
 CONFIG_FSP_USES_CB_STACK=y
@@ -722,6 +738,7 @@ CONFIG_DRIVERS_INTEL_USB4_RETIMER=y
 #
 # Verified Boot (vboot)
 #
+CONFIG_VBOOT_LIB=y
 # end of Verified Boot (vboot)
 
 #
@@ -732,7 +749,14 @@ CONFIG_TPM2=y
 CONFIG_TPM=y
 CONFIG_MAINBOARD_HAS_TPM2=y
 # CONFIG_DEBUG_TPM is not set
-# CONFIG_TPM_RDRESP_NEED_DELAY is not set
+CONFIG_TPM_RDRESP_NEED_DELAY=y
+# CONFIG_TPM_LOG_CB is not set
+CONFIG_TPM_LOG_TPM2=y
+# CONFIG_TPM_HASH_SHA1 is not set
+CONFIG_TPM_HASH_SHA256=y
+# CONFIG_TPM_HASH_SHA384 is not set
+# CONFIG_TPM_HASH_SHA512 is not set
+CONFIG_TPM_MEASURED_BOOT_RUNTIME_DATA=""
 CONFIG_PCR_BOOT_MODE=1
 CONFIG_PCR_HWID=1
 CONFIG_PCR_SRTM=2
@@ -795,7 +819,6 @@ CONFIG_DEFAULT_CONSOLE_LOGLEVEL=7
 CONFIG_CONSOLE_USE_LOGLEVEL_PREFIX=y
 CONFIG_CONSOLE_USE_ANSI_ESCAPES=y
 # CONFIG_CMOS_POST is not set
-CONFIG_POST_IO_PORT=0x80
 CONFIG_HWBASE_DEBUG_CB=y
 # end of Console
 
@@ -872,7 +895,7 @@ CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 # CONFIG_DISPLAY_FSP_CALLS_AND_STATUS is not set
 # CONFIG_DISPLAY_FSP_HEADER is not set
 # CONFIG_VERIFY_HOBS is not set
-CONFIG_DISPLAY_FSP_VERSION_INFO=y
+# CONFIG_DISPLAY_FSP_VERSION_INFO is not set
 CONFIG_DISPLAY_FSP_VERSION_INFO_2=y
 # CONFIG_ENABLE_FSP_ERROR_INFO is not set
 CONFIG_HAVE_GPIO_SNAPSHOT_VERIFY_SUPPORT=y
@@ -894,6 +917,8 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_SPI_FLASH is not set
 # CONFIG_DEBUG_BOOT_STATE is not set
 # CONFIG_DEBUG_ADA_CODE is not set
+CONFIG_HAVE_EM100_SUPPORT=y
+# CONFIG_EM100 is not set
 # CONFIG_DEBUG_ACPICA_COMPATIBLE is not set
 # end of Debugging
 
