--- a/boards/UNMAINTAINED_kgpe-d16_server/UNMAINTAINED_kgpe-d16_server.config
+++ b/boards/UNMAINTAINED_kgpe-d16_server/UNMAINTAINED_kgpe-d16_server.config
@@ -22,7 +22,7 @@ export CONFIG_LINUX_VERSION=6.1.8
 CONFIG_COREBOOT_CONFIG=config/coreboot-kgpe-d16_server.config
 CONFIG_LINUX_CONFIG=config/linux-kgpe-d16_server.config
 
-CONFIG_CRYPTSETUP=y
+CONFIG_CRYPTSETUP2=y
 CONFIG_FLASHPROG=y
 #flashprog to support internal flashing of BMC
 CONFIG_FLASHPROG_AST1100=y
