.circleci/config.yml: include V540TU in CI
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -518,6 +518,13 @@ workflows:
           requires:
             - novacustom_nv4x_adl
 
+      - build:
+          name: novacustom-v540tu
+          target: novacustom-v540tu
+          subcommand: ""
+          requires:
+            - nitropad-nv41
+
       # coreboot 4.11
       - build:
           name: UNMAINTAINED_kgpe-d16_workstation
@@ -533,7 +540,7 @@ workflows:
           subcommand: ""
           requires:
             - librem_l1um
-      
+
       # coreboot 4.11
       - build:
           name: UNMAINTAINED_kgpe-d16_server
