config/coreboot-novacustom-v540tu.config: use published FSP
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -32,8 +32,8 @@ CONFIG_USE_BLOBS=y
 # CONFIG_UBSAN is not set
 CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
 # CONFIG_ASAN is not set
-CONFIG_NO_STAGE_CACHE=y
-# CONFIG_TSEG_STAGE_CACHE is not set
+# CONFIG_NO_STAGE_CACHE is not set
+CONFIG_TSEG_STAGE_CACHE=y
 # CONFIG_UPDATE_IMAGE is not set
 # CONFIG_BOOTSPLASH_IMAGE is not set
 # CONFIG_FW_CONFIG is not set
@@ -281,8 +281,8 @@ CONFIG_SOC_INTEL_I2C_DEV_MAX=6
 CONFIG_SOC_INTEL_UART_DEV_MAX=3
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_M_VAL=0x25a
 CONFIG_SOC_INTEL_COMMON_LPSS_UART_CLK_N_VAL=0x7fff
-CONFIG_FSP_HEADER_PATH="3rdparty/blobs/mainboard/clevo/mtl-h/FSP/MeteorLake/Include/"
-CONFIG_FSP_FD_PATH="3rdparty/blobs/mainboard/clevo/mtl-h/FSP/MeteorLake/Fsp.fd"
+CONFIG_FSP_HEADER_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Include/"
+CONFIG_FSP_FD_PATH="3rdparty/dasharo-blobs/novacustom/v5x0tu/MeteorLakeFspBinPkg/Fsp.fd"
 CONFIG_DATA_BUS_WIDTH=128
 CONFIG_DIMMS_PER_CHANNEL=2
 CONFIG_MRC_CHANNEL_WIDTH=16
@@ -562,6 +562,7 @@ CONFIG_BIOS_VENDOR="3mdeb"
 #
 # Dasharo Configuration
 #
+# CONFIG_DASHARO_PREFER_S3_SLEEP is not set
 CONFIG_DASHARO_FIRMWARE_UPDATE_MODE=y
 # end of Dasharo Configuration
 
@@ -602,11 +603,21 @@ CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS_IN_ALL_STAGES=y
 #
 # Devices
 #
+CONFIG_HAVE_LINEAR_FRAMEBUFFER=y
 CONFIG_HAVE_FSP_GOP=y
 # CONFIG_VGA_ROM_RUN is not set
-# CONFIG_RUN_FSP_GOP is not set
-CONFIG_NO_GFX_INIT=y
+CONFIG_RUN_FSP_GOP=y
+# CONFIG_NO_GFX_INIT is not set
 CONFIG_NO_EARLY_GFX_INIT=y
+
+#
+# Display
+#
+CONFIG_GENERIC_LINEAR_FRAMEBUFFER=y
+CONFIG_LINEAR_FRAMEBUFFER=y
+CONFIG_BOOTSPLASH=y
+# end of Display
+
 CONFIG_PCI=y
 CONFIG_ECAM_MMCONF_SUPPORT=y
 CONFIG_PCIX_PLUGIN_SUPPORT=y
@@ -662,6 +673,7 @@ CONFIG_DRIVERS_I2C_HID=y
 # CONFIG_DRIVERS_I2C_MAX98396 is not set
 # CONFIG_DISPLAY_HOBS is not set
 # CONFIG_DISPLAY_UPD_DATA is not set
+# CONFIG_BMP_LOGO is not set
 CONFIG_PLATFORM_USES_FSP2_0=y
 CONFIG_PLATFORM_USES_FSP2_1=y
 CONFIG_PLATFORM_USES_FSP2_2=y
@@ -675,6 +687,7 @@ CONFIG_FSP_FULL_FD=y
 CONFIG_FSP_T_RESERVED_SIZE=0x0
 CONFIG_FSP_M_XIP=y
 CONFIG_FSP_USES_CB_STACK=y
+CONFIG_HAVE_FSP_LOGO_SUPPORT=y
 CONFIG_FSP_COMPRESS_FSP_S_LZ4=y
 CONFIG_FSP_STATUS_GLOBAL_RESET_REQUIRED_3=y
 CONFIG_FSP_STATUS_GLOBAL_RESET=0x40000003
@@ -806,6 +819,8 @@ CONFIG_HWBASE_DEBUG_CB=y
 # end of Console
 
 CONFIG_ACPI_S1_NOT_SUPPORTED=y
+CONFIG_HAVE_ACPI_RESUME=y
+CONFIG_RESUME_PATH_SAME_AS_BOOT=y
 CONFIG_HAVE_MONOTONIC_TIMER=y
 CONFIG_HAVE_OPTION_TABLE=y
 CONFIG_IOAPIC=y
@@ -849,7 +864,6 @@ CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 # CONFIG_COREDOOM_SECONDARY_PAYLOAD is not set
 # end of Secondary Payloads
 # end of Payload
-
 
 #
 # Debugging
