config/coreboot* config/linux* : verify/unify/fix branding strings (only LOCALVERSION was varying)
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-talos-2.config
+++ b/config/coreboot-talos-2.config
@@ -7,7 +7,7 @@
 # General setup
 #
 CONFIG_COREBOOT_BUILD=y
-CONFIG_LOCALVERSION="Heads-v0.2.0-2215-g21ab781-dirty"
+CONFIG_LOCALVERSION=""
 CONFIG_CBFS_PREFIX="fallback"
 CONFIG_COMPILER_GCC=y
 # CONFIG_ALLOW_EXPERIMENTAL_CLANG is not set
