--- a/config/linux-linuxboot.config
+++ b/config/linux-linuxboot.config
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-heads"
+CONFIG_LOCALVERSION="-@BRAND_NAME@"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_XZ=y
 CONFIG_DEFAULT_HOSTNAME="linuxboot"
