--- a/config/coreboot-novacustom-v540tu.config
+++ b/config/coreboot-novacustom-v540tu.config
@@ -115,6 +115,7 @@ CONFIG_FMDFILE=""
 # CONFIG_NO_POST is not set
 CONFIG_MAINBOARD_VENDOR="Clevo"
 CONFIG_CBFS_SIZE=0x1000000
+CONFIG_CONSOLE_SERIAL=y
 CONFIG_MAX_CPUS=22
 CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 # CONFIG_POST_DEVICE is not set
@@ -201,6 +202,7 @@ CONFIG_PCIEXP_HOTPLUG_MEM=0xc200000
 CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM=0x1c000000
 CONFIG_PS2K_EISAID="PNP0303"
 CONFIG_PS2M_EISAID="PNP0F13"
+CONFIG_TTYS0_BAUD=115200
 CONFIG_POWER_STATE_DEFAULT_ON_AFTER_FAILURE=y
 CONFIG_D3COLD_SUPPORT=y
 CONFIG_PCIEXP_ASPM=y
@@ -252,6 +254,7 @@ CONFIG_FSP_S_FILE="$(obj)/Fsp_S.fd"
 CONFIG_CBFS_MCACHE_SIZE=0x4000
 CONFIG_ROMSTAGE_ADDR=0x2000000
 CONFIG_VERSTAGE_ADDR=0x2000000
+CONFIG_CONSOLE_UART_BASE_ADDRESS=0xfe02c000
 CONFIG_SMM_TSEG_SIZE=0x800000
 CONFIG_SMM_RESERVED_SIZE=0x200000
 CONFIG_SMM_MODULE_STACK_SIZE=0x800
@@ -439,6 +442,7 @@ CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_THERMAL_BEHIND_PMC=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_TIMER=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_UART=y
+CONFIG_INTEL_LPSS_UART_FOR_CONSOLE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_PCIE=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_USB4_XHCI=y
@@ -658,8 +662,10 @@ CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP_EARLY=y
 # CONFIG_SPI_FLASH_NO_FAST_READ is not set
 CONFIG_TPM_INIT_RAMSTAGE=y
 CONFIG_TPM_PPI=y
+CONFIG_DRIVERS_UART=y
 CONFIG_NO_UART_ON_SUPERIO=y
-# CONFIG_DRIVERS_UART_OXPCIE is not set
+CONFIG_DRIVERS_UART_8250MEM=y
+CONFIG_DRIVERS_UART_8250MEM_32=y
 # CONFIG_VPD is not set
 CONFIG_DRIVERS_GENERIC_BAYHUB_LV2=y
 # CONFIG_DRIVERS_GENERIC_CBFS_SERIAL is not set
@@ -795,10 +801,24 @@ CONFIG_HEAP_SIZE=0x100000
 CONFIG_BOOTBLOCK_CONSOLE=y
 CONFIG_POSTCAR_CONSOLE=y
 CONFIG_SQUELCH_EARLY_SMP=y
+CONFIG_FIXED_UART_FOR_CONSOLE=y
+
+#
+# memory mapped, 8250-compatible
+#
+CONFIG_TTYS0_BASE=0x3f8
+# CONFIG_CONSOLE_SERIAL_921600 is not set
+# CONFIG_CONSOLE_SERIAL_460800 is not set
+# CONFIG_CONSOLE_SERIAL_230400 is not set
+CONFIG_CONSOLE_SERIAL_115200=y
+# CONFIG_CONSOLE_SERIAL_57600 is not set
+# CONFIG_CONSOLE_SERIAL_38400 is not set
+# CONFIG_CONSOLE_SERIAL_19200 is not set
+# CONFIG_CONSOLE_SERIAL_9600 is not set
+CONFIG_TTYS0_LCS=3
 # CONFIG_SPKMODEM is not set
 # CONFIG_CONSOLE_NE2K is not set
 CONFIG_CONSOLE_CBMEM=y
-# CONFIG_CONSOLE_CBMEM_DUMP_TO_UART is not set
 # CONFIG_CONSOLE_SPI_FLASH is not set
 # CONFIG_CONSOLE_I2C_SMBUS is not set
 # CONFIG_CONSOLE_SYSTEM76_EC is not set
@@ -893,6 +913,7 @@ CONFIG_HAVE_GPIO_SNAPSHOT_VERIFY_SUPPORT=y
 #
 # General Debug Settings
 #
+# CONFIG_GDB_STUB is not set
 # CONFIG_FATAL_ASSERTS is not set
 CONFIG_HAVE_DEBUG_GPIO=y
 # CONFIG_DEBUG_GPIO is not set
