bugfix, bootsplash: qemu coreboot prod configs: add CONFIG_BOOTSPLASH_CONVERT_RESIZE=y and CONFIG_BOOTSPLASH_CONVERT_RESOLUTION="1280x720"
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-qemu-tpm2-prod.config
+++ b/config/coreboot-qemu-tpm2-prod.config
@@ -39,7 +39,8 @@ CONFIG_BOOTSPLASH_IMAGE=y
 CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash.jpg"
 CONFIG_BOOTSPLASH_CONVERT=y
 CONFIG_BOOTSPLASH_CONVERT_QUALITY=70
-# CONFIG_BOOTSPLASH_CONVERT_RESIZE is not set
+CONFIG_BOOTSPLASH_CONVERT_RESIZE=y
+CONFIG_BOOTSPLASH_CONVERT_RESOLUTION="1280x720"
 # CONFIG_BOOTSPLASH_CONVERT_COLORSWAP is not set
 # CONFIG_FW_CONFIG is not set
 
@@ -324,7 +325,6 @@ CONFIG_NO_EARLY_GFX_INIT=y
 CONFIG_GENERIC_LINEAR_FRAMEBUFFER=y
 CONFIG_LINEAR_FRAMEBUFFER=y
 CONFIG_BOOTSPLASH=y
-CONFIG_HEAP_SIZE=0x100000
 # end of Display
 
 CONFIG_PCI=y
@@ -436,6 +436,7 @@ CONFIG_ACPI_COMMON_MADT_IOAPIC=y
 CONFIG_HAVE_ACPI_TABLES=y
 CONFIG_BOOT_DEVICE_NOT_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_MEMORY_MAPPED=y
+CONFIG_HEAP_SIZE=0x100000
 
 #
 # Console
