bugfix qemu boards: revert changes of CONFIG_BOOTSPLASH_CONVERT_RESOLUTION=XYZ for all boards, set qemu prod boards to 1440x810
* CONFIG_BOOTSPLASH_CONVERT_RESOLUTION: setting this stretches the bootsplash and makes it ugly. Revert the change on master so that produced videos/screenshots are ok.
* qemu prod boards: CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_XRES=1440 and CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_YRES=810 brings the Height just big enough to fit on screens we mostly have out there.
* qemu dev boards: CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_XRES=1024 and CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_YRES=768: is a reminder of x230's 1376x768 (16:9) for Height and shows us that things are not perfect for all platforms

Notes:
- cannot put to 1376x768 for qemu (would have been nice to see what console text looks like + fbwhiptail windows for x230 (min screen size supported)
  - that tears bochs fb for some unknown reason
    - doesn't tear x230 fb (TODO: bug report for bochs qemu driver?)

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-qemu-tpm1-prod.config
+++ b/config/coreboot-qemu-tpm1-prod.config
@@ -39,8 +39,7 @@ CONFIG_BOOTSPLASH_IMAGE=y
 CONFIG_BOOTSPLASH_FILE="@BRAND_DIR@/bootsplash.jpg"
 CONFIG_BOOTSPLASH_CONVERT=y
 CONFIG_BOOTSPLASH_CONVERT_QUALITY=70
-CONFIG_BOOTSPLASH_CONVERT_RESIZE=y
-CONFIG_BOOTSPLASH_CONVERT_RESOLUTION="1280x720"
+# CONFIG_BOOTSPLASH_CONVERT_RESIZE is not set
 # CONFIG_BOOTSPLASH_CONVERT_COLORSWAP is not set
 # CONFIG_FW_CONFIG is not set
 
@@ -365,8 +364,8 @@ CONFIG_HAVE_USBDEBUG_OPTIONS=y
 # CONFIG_USBDEBUG is not set
 # CONFIG_VPD is not set
 CONFIG_DRIVERS_EMULATION_QEMU_BOCHS=y
-CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_XRES=1280
-CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_YRES=720
+CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_XRES=1440
+CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_YRES=810
 # CONFIG_DRIVERS_GENERIC_CBFS_SERIAL is not set
 # CONFIG_DRIVERS_GENERIC_CBFS_UUID is not set
 # CONFIG_DRIVERS_GENESYSLOGIC_GL9750 is not set
