config/linux-nitropad-x.config: put =n to obvious options only, lot of things changed, see notes in this commit. Saved in olddefconfig './docker_repro.sh make BOARD=novacustom-v540tu linux.save_in_olddefconfig_format_in_place'
compare with : git difftool 510bc6ee705f36a5999fb2c55a2b234a34700f2b
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/linux-nitropad-x.config
+++ b/config/linux-nitropad-x.config
@@ -1439,8 +1439,7 @@ CONFIG_E1000E_HWTS=y
 # CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
-CONFIG_NET_VENDOR_META=y
-# CONFIG_FBNIC is not set
+# CONFIG_NET_VENDOR_META is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MICROSEMI is not set
@@ -1628,7 +1627,7 @@ CONFIG_VT_CONSOLE=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_UNIX98_PTYS=y
 # CONFIG_LEGACY_PTYS is not set
-CONFIG_LEGACY_TIOCSTI=y
+# CONFIG_LEGACY_TIOCSTI is not set
 CONFIG_LDISC_AUTOLOAD=y
 
 #
