nitropad-ns50: remove PR0 until tested and readded in seperate PR
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/nitropad-ns50/nitropad-ns50.config
+++ b/boards/nitropad-ns50/nitropad-ns50.config
@@ -30,9 +30,10 @@ CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
 
+#TODO: readd when tested
 #platform locking finalization (PR0)
-CONFIG_IO386=y
-export CONFIG_FINALIZE_PLATFORM_LOCKING=y
+#CONFIG_IO386=y
+#export CONFIG_FINALIZE_PLATFORM_LOCKING=y
 
 
 #Remote attestation support
