novacustom_nv4x_adl/novacustom_nv4x_adl.config : add quiet mode for real hardware recording in PR, will comment and generalize in next commit to all maintained boards, leaving this to be overriden by branding downstream for downstream releases exercice and choice
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
+++ b/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
@@ -14,6 +14,9 @@ CONFIG_LINUX_CONFIG=config/linux-nitropad-x.config
 #Enable TPM2 pcap output under /tmp
 #export CONFIG_TPM2_CAPTURE_PCAP=y
 
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
+
 #On-demand hardware support (modules.cpio)
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000=y
