--- a/boards/UNMAINTAINED_kgpe-d16_workstation-usb_keyboard/UNMAINTAINED_kgpe-d16_workstation-usb_keyboard.config
+++ b/boards/UNMAINTAINED_kgpe-d16_workstation-usb_keyboard/UNMAINTAINED_kgpe-d16_workstation-usb_keyboard.config
@@ -49,6 +49,8 @@ export CONFIG_USB_KEYBOARD_REQUIRED=y
 export CONFIG_TPM=y
 #BOOT SCRIPT SELECTION
 #export CONFIG_BOOTSCRIPT=/bin/generic-init
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 #export CONFIG_BOOTSCRIPT_NETWORK=/bin/network-init-recovery
 
