--- a/boards/UNTESTED_w541-maximized/UNTESTED_w541-maximized.config
+++ b/boards/UNTESTED_w541-maximized/UNTESTED_w541-maximized.config
@@ -34,6 +34,8 @@ CONFIG_LINUX_USB=y
 CONFIG_MOBILE_TETHERING=y
 
 export CONFIG_TPM=y
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
