--- a/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
+++ b/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
@@ -67,6 +67,8 @@ export CONFIG_TPM2_TOOLS=y
 export CONFIG_PRIMARY_KEY_TYPE=ecc
 #TPM1 requirements
 #export CONFIG_TPM=y
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
