--- a/config/coreboot-novacustom-v560tu.config
+++ b/config/coreboot-novacustom-v560tu.config
@@ -24,7 +24,7 @@ CONFIG_COMPRESS_RAMSTAGE_LZMA=y
 CONFIG_SEPARATE_ROMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
-# CONFIG_TIMESTAMPS_ON_CONSOLE is not set
+CONFIG_TIMESTAMPS_ON_CONSOLE=y
 CONFIG_USE_BLOBS=y
 # CONFIG_USE_AMD_BLOBS is not set
 # CONFIG_USE_QC_BLOBS is not set
