--- a/boards/UNMAINTAINED_kgpe-d16_server/UNMAINTAINED_kgpe-d16_server.config
+++ b/boards/UNMAINTAINED_kgpe-d16_server/UNMAINTAINED_kgpe-d16_server.config
@@ -43,6 +43,13 @@ CONFIG_LINUX_E1000E=y
 export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
 
 export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 #BOOT SCRIPT SELECTION
 export CONFIG_BOOTSCRIPT=/bin/generic-init
 #export CONFIG_BOOTSCRIPT_NETWORK=/bin/network-init-recovery
