--- a/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
+++ b/boards/novacustom_nv4x_adl/novacustom_nv4x_adl.config
@@ -8,12 +8,6 @@ export CONFIG_LINUX_VERSION=6.1.8
 CONFIG_COREBOOT_CONFIG=config/coreboot-novacustom_nv4x_adl.config
 CONFIG_LINUX_CONFIG=config/linux-nitropad-x.config
 
-#Enable DEBUG output
-#export CONFIG_DEBUG_OUTPUT=y
-#export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
-#Enable TPM2 pcap output under /tmp
-#export CONFIG_TPM2_CAPTURE_PCAP=y
-
 #On-demand hardware support (modules.cpio)
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000=y
@@ -67,6 +61,13 @@ export CONFIG_TPM2_TOOLS=y
 export CONFIG_PRIMARY_KEY_TYPE=ecc
 #TPM1 requirements
 #export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
@@ -74,4 +75,3 @@ export CONFIG_BOOT_KERNEL_ADD=""
 export CONFIG_BOOT_KERNEL_REMOVE="intel_iommu=on intel_iommu=igfx_off"
 export CONFIG_BOARD_NAME="NovaCustom NV4x 12th Gen"
 export CONFIG_FLASH_OPTIONS="flashprog --progress --programmer internal"
-export CONFIG_AUTO_BOOT_TIMEOUT=5
