--- a/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
+++ b/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
@@ -16,12 +16,6 @@ CONFIG_LINUX_CONFIG=config/linux-qemu.config
 #Enable HAVE_GPG_KEY_BACKUP to test GPG key backup drive (we cannot inject config under QEMU (no internal flashing))
 #export CONFIG_HAVE_GPG_KEY_BACKUP=y
 
-#Enable DEBUG output
-export CONFIG_DEBUG_OUTPUT=y
-export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
-#Enable TPM2 pcap output under /tmp
-#export CONFIG_TPM2_CAPTURE_PCAP=y
-
 #On-demand hardware support (modules.cpio)
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000=y
@@ -80,6 +74,13 @@ export CONFIG_AUTO_BOOT_TIMEOUT=5
 #export CONFIG_PRIMARY_KEY_TYPE=ecc
 #TPM1 requirements
 export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=y
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
+#Enable TPM2 pcap output under /tmp
+#export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=n
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 #text-based original init:
 #export CONFIG_BOOTSCRIPT=/bin/generic-init
@@ -90,6 +91,5 @@ export CONFIG_BOOT_KERNEL_ADD="console=ttyS0 console=tty systemd.zram=0"
 export CONFIG_BOOT_KERNEL_REMOVE="quiet rhgb splash"
 export CONFIG_BOARD_NAME="qemu-coreboot-whiptail-tpm1"
 #export CONFIG_FLASH_OPTIONS="flashprog --progress --programmer internal"
-#export CONFIG_AUTO_BOOT_TIMEOUT=5
 
 BOARD_TARGETS := qemu
