--- a/boards/z220-cmt-maximized/z220-cmt-maximized.config
+++ b/boards/z220-cmt-maximized/z220-cmt-maximized.config
@@ -54,6 +54,13 @@ CONFIG_LINUX_USB=y
 CONFIG_MOBILE_TETHERING=y
 
 export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
