--- a/boards/UNTESTED_talos-2/UNTESTED_talos-2.config
+++ b/boards/UNTESTED_talos-2/UNTESTED_talos-2.config
@@ -41,6 +41,13 @@ export CONFIG_USB_KEYBOARD_REQUIRED=y
 export CONFIG_BOOT_EXTRA_TTYS="tty0"
 
 export CONFIG_TPM=y
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/talos-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
