--- a/boards/x230-hotp-maximized_usb-kb/x230-hotp-maximized_usb-kb.config
+++ b/boards/x230-hotp-maximized_usb-kb/x230-hotp-maximized_usb-kb.config
@@ -15,10 +15,6 @@ export CONFIG_LINUX_VERSION=6.1.8
 CONFIG_COREBOOT_CONFIG=config/coreboot-x230-maximized.config
 CONFIG_LINUX_CONFIG=config/linux-x230-maximized.config
 
-#Enable DEBUG output
-#export CONFIG_DEBUG_OUTPUT=y
-#export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
-
 #Additional hardware support
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000E=y
@@ -68,6 +64,13 @@ CONFIG_FBWHIPTAIL=y
 #SSH server (requires ethernet drivers, eg: CONFIG_LINUX_E1000E)
 CONFIG_DROPBEAR=y
 
+#Enable DEBUG output
+export CONFIG_DEBUG_OUTPUT=n
+export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=n
+#Enable TPM2 pcap output under /tmp
+export CONFIG_TPM2_CAPTURE_PCAP=n
+#Enable quiet mode: technical information logged under /tmp/debug.log
+export CONFIG_QUIET_MODE=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
