WiP: review Early DMA protections
Repro trace:
- sed -i -e 's/^# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set/CONFIG_ENABLE_EARLY_DMA_PROTECTION=y/' config/coreboot-*
- sed -i -e 's/^# CONFIG_IOMMU_SUPPORT is not set/CONFIG_IOMMU_SUPPORT=y/'              -e 's/^# CONFIG_DMA_REMAP is not set/CONFIG_DMA_REMAP=y/'        -e 's/^# CONFIG_DMAR_TABLE is not set/CONFIG_DMAR_TABLE=y/'        -e 's/^# CONFIG_DMA_SHARED_BUFFER is not set/CONFIG_DMA_SHARED_BUFFER=y/'        -e 's/^# CONFIG_DMA_RESTRICTED_POOL is not set/CONFIG_DMA_RESTRICTED_POOL=y/'        -e 's/^# CONFIG_IOMMU_DEFAULT_DMA_STRICT is not set/CONFIG_IOMMU_DEFAULT_DMA_STRICT=y/'        config/linux-*

Then msave changes in olconfig:
- ./docker_repro.sh
- find boards/ -type d | awk -F "/" {'print $2'} | while read board; do make BOARD=$board coreboot.save_in_oldconfig_format_in_place; done
- find boards/ -type d | awk -F "/" {'print $2'} | while read board; do make BOARD=$board linux.save_in_oldconfig_format_in_place; done

Changes are under this commit

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-nitropad-ns50.config
+++ b/config/coreboot-nitropad-ns50.config
@@ -423,7 +423,7 @@ CONFIG_SOC_INTEL_ENABLE_USB4_PCIE_RESOURCES=y
 CONFIG_FIRMWARE_CONNECTION_MANAGER=y
 # CONFIG_SOFTWARE_CONNECTION_MANAGER is not set
 CONFIG_SOC_INTEL_COMMON_BLOCK_VTD=y
-# CONFIG_ENABLE_EARLY_DMA_PROTECTION is not set
+CONFIG_ENABLE_EARLY_DMA_PROTECTION=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XDCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI=y
 CONFIG_SOC_INTEL_COMMON_BLOCK_XHCI_ELOG=y
